# icesid

./: CMakeLists.txt  Makefile  Makefile.nano  Makefile.sugar  README.md  env.v  icesugar.pcf  icesugarnano.pcf  redip-sid.pcf  sid.v  top.v  voice.v
.github/workflows/: release.yml
captures/: i2s_master_tb.vcd  saleae-capture.sal  saleae_capture.csv
csid/: Makefile  Mikuk.sid  csid-light.c
icesid/: cic.v  clip.v  curve_6581.hex  dac.v  env.v  filter.v  icesid.f  mult.v  output.v  pot.v  sid.v  voice.v
icesugar/: Makefile.mk  i2s.v  icesugar.pcf  top.v
reDIP-SID/: Makefile.mk  i2c_state_machine.v  i2s.v  i2s_init_data.hex  sid_bus_if.v  top.v
rtl/: biu.v  env.v  filter.v  i2c_state_machine.v  muacm.v  sid.v  sid_bus_if.v  sine.hex  spi.v  sysmgr_hfosc.v  top.v  voice.v
sim/: i2c_state_machine_tb.v  i2s_master_tb.v  top_tb.v
tablegen/: dac.h  filter.h  tablegen.cpp
verilator/: csid-light.c  ice40.v  icesid.cpp  verilator.cpp
